# pinky_studio

./: .gitignore  INSTALL.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx
src/lib/: ble-client.ts  ble-constants.ts  ble-protocol.ts
