[package]
name = "pinky-desktop"
version = "0.2.0"
description = "Pinky WiFi 설정 (BLE) 데스크탑 앱"
authors = ["PinkLab"]
edition = "2021"

# 크레이트/패키지 이름(git)은 pinky-desktop 그대로 두되, 설치되는 실행파일/명령은
# pinky-studio 로 나가게 한다. (tauri.conf.json 의 mainBinaryName 과 짝)
[[bin]]
name = "pinky-studio"
path = "src/main.rs"

[lib]
name = "pinky_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# crates.io 의 0.4.5 를 그대로 vendoring 후, notify/scan 채널 패닉 버그를 패치한 로컬 사본 사용
tauri-plugin-blec = { path = "vendor/tauri-plugin-blec" }
# IP:8888 Jupyter 링크를 기본 브라우저로 열기 위한 플러그인
tauri-plugin-opener = "2"
